--- a/@rsw/gl-test/Cargo.toml
+++ b/@rsw/gl-test/Cargo.toml
@@ -12,6 +12,7 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 js-sys = "0.3.55"
 wasm-bindgen = "0.2.83"
+nalgebra = "0.32.2"
 
 [dependencies.web-sys]
 version = "0.3.53"
