--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"rsw watch\" \"vite --host\"",
-    "build": "rsw build && tsc && vite build",
+    "dev": "concurrently \"rsw watch\" \"vite . --host\"",
+    "build": "rsw build && tsc && vite build .",
     "preview": "vite preview",
     "rsw": "rsw"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "concurrently": "^8.0.1",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2",
     "vite": "^4.3.2",
     "vite-plugin-rsw": "^2.0.11"
-  },
-  "dependencies": {
-    "concurrently": "^8.0.1"
   }
 }
