--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "concurrently": "^8.0.1",
+    "daisyui": "^2.51.6",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.2",
