--- a/.github/workflows/build-static-site.yml
+++ b/.github/workflows/build-static-site.yml
@@ -14,4 +14,4 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag webgltest-env:$(date +%s)
     - name: Build static site
-      run: docker run -it --workdir /src -v $(pwd):/src webgltest-env:latest npm run build
+      run: docker run --workdir /src -v $(pwd):/src webgltest-env:latest npm run build
