--- a/.github/workflows/build-static-site.yml
+++ b/.github/workflows/build-static-site.yml
@@ -12,6 +12,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag webgltest-env:$(date +%s)
+      run: docker build . --file Dockerfile --tag webgltest-env
     - name: Build static site
-      run: docker run --workdir /src -v $(pwd):/src webgltest-env:latest npm run build
+      run: docker run --workdir /src -v $(pwd):/src webgltest-env npm run build
