--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.2",
-    "vite-plugin-rsw": "^2.0.11"
+    "vite-plugin-rsw": "^2.0.11",
+    "typescript": "^5.2.2"
   }
 }
