--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "concurrently \"rsw watch\" \"vite . --host\"",
-    "build": "rsw build && tsc && vite build .",
+    "build": "rsw build && vite build .",
     "preview": "vite preview",
     "rsw": "rsw"
   },
@@ -16,7 +16,6 @@
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.2",
-    "vite-plugin-rsw": "^2.0.11",
-    "typescript": "^5.2.2"
+    "vite-plugin-rsw": "^2.0.11"
   }
 }
