--- a/@rsw/gl-test/Cargo.toml
+++ b/@rsw/gl-test/Cargo.toml
@@ -13,6 +13,8 @@ crate-type = ["cdylib", "rlib"]
 js-sys = "0.3.55"
 wasm-bindgen = "0.2.83"
 nalgebra = "0.32.2"
+rand = "0.8.5"
+getrandom = { version = "0.2.10", features = ["js"] }
 
 [dependencies.web-sys]
 version = "0.3.53"
