--- a/@rsw/gl-test/Cargo.toml
+++ b/@rsw/gl-test/Cargo.toml
@@ -13,7 +13,7 @@ crate-type = ["cdylib", "rlib"]
 js-sys = "0.3.55"
 wasm-bindgen = "0.2.83"
 nalgebra = "0.32.2"
-rand = "0.8.5"
+noise = "0.8"
 getrandom = { version = "0.2.10", features = ["js"] }
 
 [dependencies.web-sys]
