--- a/.github/workflows/deploy-static-site.yml
+++ b/.github/workflows/deploy-static-site.yml
@@ -14,6 +14,7 @@ jobs:
       - name: Download Artifact
         uses: actions/download-artifact@v3
         with:
+          run_id: ${{ github.event.workflow_run.id }}
           name: static-site
           path: dist
       - name: "TEST: Display files"
