Give deploy workflow read permissions for actions

--- a/.github/workflows/deploy-static-site.yml
+++ b/.github/workflows/deploy-static-site.yml
@@ -10,6 +10,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    permissions:
+      actions: read
     steps:
       - name: Download Artifact
         uses: dawidd6/action-download-artifact@v2
