--- a/@rsw/gl-test/Cargo.toml
+++ b/@rsw/gl-test/Cargo.toml
@@ -15,6 +15,7 @@ wasm-bindgen = "0.2.83"
 nalgebra = "0.32.2"
 noise = "0.8"
 getrandom = { version = "0.2.10", features = ["js"] }
+include_dir = { version = "0.7.4", features = ["glob"] }
 
 [dependencies.web-sys]
 version = "0.3.53"
