--- a/.github/workflows/deploy-static-site.yml
+++ b/.github/workflows/deploy-static-site.yml
@@ -14,21 +14,16 @@ jobs:
       actions: read
     steps:
       - name: Download Artifact
-        uses: dawidd6/action-download-artifact@v2
+        uses: dawidd6/action-download-artifact@v11
         with:
           run_id: ${{ github.event.workflow_run.id }}
           name: static-site
           path: dist
-      - name: Upload static site to server
-        uses: appleboy/scp-action@v0.1.4
+      - name: Setup deployment keys
+        uses: webfactory/ssh-agent@v0.9.1
         with:
-          host: ${{ secrets.DEPLOY_HOST }}
-          username: ${{ secrets.DEPLOY_USERNAME }}
-          key: ${{ secrets.DEPLOY_KEY }}
-          proxy_host: ${{ secrets.DEPLOY_PROXY_HOST }}
-          proxy_username: ${{ secrets.DEPLOY_PROXY_USERNAME }}
-          proxy_key: ${{ secrets.DEPLOY_PROXY_KEY }}
-          source: dist/*
-          target: /srv/jbuelow-com/
-          strip_components: 1
-          overwrite: true
+          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
+      - name: Upload static site to server
+        run: |
+          echo "${{ secrets.DEPLOY_KNOWN_HOSTS }}" >> ~/.ssh/known_hosts
+          tar -czf - -C dist . | ssh -J ${{ secrets.DEPLOY_PROXY_USERNAME }}@${{ secrets.DEPLOY_PROXY_HOST }} ${{ secrets.DEPLOY_USERNAME }}@${{ secrets.DEPLOY_HOST }} "rm -rf /srv/jbuelow-com/* && tar -xzf - -C /srv/jbuelow-com"
